--- a/.github/workflows/checkly.yml
+++ b/.github/workflows/checkly.yml
@@ -23,10 +23,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Checkly CLI
+        run: npm install -g checkly
+
       - name: Deploy checks to Checkly
-        uses: checkly/github-actions@v1
-        with:
-          command: 'deploy'
+        run: npx checkly deploy --force
         env:
           CHECKLY_API_KEY: ${{ secrets.CHECKLY_API_KEY }}
           CHECKLY_ACCOUNT_ID: ${{ secrets.CHECKLY_ACCOUNT_ID }}
